# aic-connector-cv

./: .gitignore  README.md  docker_build.sh  main.py  pyproject.toml  settings.template.yaml
.github/workflows/: build-publish-latest.yaml  create-release.yaml  pr_build.yaml
aicconnector/: aicconnector.py  config.py  httpoutput.py  stage.py  storeoutput.py
aicconnector/deployment/helm/: customvalues.template.yaml
aicconnector/deployment/helm/templates/: aic-connector-cv.statefulset.yaml
deployment/helm/: .helmignore  Chart.yaml  Readme.md  customvalues.template.yaml  values.yaml
deployment/helm/templates/: _helpers.tpl  aic-connector-cv.configmap.yaml  aic-connector-cv.statefulset.yaml
tests/: test_aicconnector.py  test_httpoutput.py  test_imports.py  test_stage.py
